syntax = "proto3";

package order;

// Importa el archivo common.proto
import "common.proto";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc FindAll (common.PaginateRequest) returns (FindAllResponse) {}
}

message CreateOrderRequest {
  int32 productId = 1;
  int32 quantity = 2;
  int32 userId = 3;
}

message CreateOrderResponse {
  int32 status = 1;
  repeated string error = 2;
  string id = 3;
}

message ProductDetail {
  int32 id = 1;
  string name = 2; // Cambia esto seg√∫n tus necesidades
  string sku = 3;
}

message FindOneData {
  string id = 1;
  string created_at = 2;
  int32 quantity = 3;
  double price = 4;
  ProductDetail product = 5;
}

message FindOneRequest {
  string id = 1;
}

message FindOneResponse {
  int32 status = 1;
  repeated string error = 2;
  FindOneData data = 3;
}

message FindAllResponse {
  int32 status = 1;
  repeated string error = 2;
  repeated FindOneData data = 3;
  common.PaginationObject pagination = 4;
}