syntax = "proto3";

package product;

// Importa el archivo common.proto
import "common.proto";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse) {}
  rpc FindAll (common.PaginateRequest) returns (FindAllResponse) {}
  rpc FindOne (FindOneRequest) returns (FindOneResponse) {}
  rpc InventoryProduct (InventoryProductRequest) returns (InventoryProductResponse) {}
  rpc DecreaseStock (DecreaseStockRequest) returns (DecreaseStockResponse) {}
}

// CreateProduct

message CreateProductRequest {
  string name = 1;
  string sku = 2;
  int32 stock = 3;
  double price = 4;
}

message CreateProductResponse {
  int32 status = 1;
  repeated string error = 2;
  int32 id = 3;
}

// FindOne

message FindOneData {
  int32 id = 1;
  string name = 2;
  string sku = 3;
  int32 stock = 4;
  double price = 5;
}

message FindOneRequest {
  int32 id = 1;
}

message FindOneResponse {
  int32 status = 1;
  repeated string error = 2;
  FindOneData data = 3;
}

message InventoryProductRequest {
  int32 id = 1;
  int32 quantity = 2;
  string expired_date = 2;
}

message InventoryProductResponse {
  int32 status = 1;
  repeated string error = 2;
}

// DecreaseStock

message DecreaseStockRequest {
  int32 id = 1;
  string orderId = 2;
  int32 quantity = 3;
}

message DecreaseStockResponse {
  int32 status = 1;
  repeated string error = 2;
}

message FindAllResponse {
  int32 status = 1;
  repeated string error = 2;
  repeated FindOneData data = 3;
  common.PaginationObject pagination = 4;
}
